增加支付功能简单判断

--- a/src/main/webapp/static/css/orderList.css
+++ b/src/main/webapp/static/css/orderList.css
@@ -58,3 +58,9 @@
     width: 100%;
     margin: 20px 0;
 }
+
+.rentUserName {
+    color: #1E90FF;
+    font-family: "Microsoft YaHei";
+    font-size: large;
+}
